// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewCard renders deprecated image 1`] = `
<PreviewCard__BoxContainer
  isLarge=""
>
  <PreviewCard__ImageContainer
    isLarge=""
  >
    <Image
      alt="Image of co-workers collaborating"
      height={300}
      src="blog-example.jpg"
      width={300}
    />
  </PreviewCard__ImageContainer>
  <PreviewCard__Anchor>
    <Box
      horizontal={3}
      inline={false}
      tag="div"
      vertical={3}
    >
      <PreviewCard__ContentContainer
        data-testid="contentContainer"
      >
        <Box
          inline={false}
          tag="div"
        >
          <PreviewCard__P
            alt=""
          />
        </Box>
      </PreviewCard__ContentContainer>
    </Box>
  </PreviewCard__Anchor>
</PreviewCard__BoxContainer>
`;

exports[`PreviewCard renders media when type is image 1`] = `
<PreviewCard__BoxContainer
  isLarge=""
  isVideo={false}
>
  <PreviewCard__Anchor>
    <PreviewCard__ImageContainer
      isLarge=""
    >
      <Image
        alt="Image of co-workers collaborating"
        height={300}
        src="blog-example.jpg"
        width={300}
      />
    </PreviewCard__ImageContainer>
  </PreviewCard__Anchor>
  <PreviewCard__Anchor>
    <Box
      horizontal={3}
      inline={false}
      tag="div"
      vertical={3}
    >
      <PreviewCard__ContentContainer
        data-testid="contentContainer"
      >
        <Box
          inline={false}
          tag="div"
        >
          <PreviewCard__P
            alt=""
          />
        </Box>
      </PreviewCard__ContentContainer>
    </Box>
  </PreviewCard__Anchor>
</PreviewCard__BoxContainer>
`;

exports[`PreviewCard renders media when type is video 1`] = `
<PreviewCard__BoxContainer
  isLarge=""
  isVideo={true}
>
  <PreviewCard__VideoContainer
    isLarge=""
  >
    <WebVideo
      aspectRatio="4:3"
      beginMuted={false}
      copy="en"
      defaultVolume={70}
      onStart={[Function]}
      videoId="video-id"
      videoLength={30}
    />
  </PreviewCard__VideoContainer>
  <PreviewCard__Anchor>
    <Box
      horizontal={3}
      inline={false}
      tag="div"
      vertical={3}
    >
      <PreviewCard__ContentContainer
        data-testid="contentContainer"
      >
        <Box
          inline={false}
          tag="div"
        >
          <PreviewCard__P
            alt=""
          />
        </Box>
      </PreviewCard__ContentContainer>
    </Box>
  </PreviewCard__Anchor>
</PreviewCard__BoxContainer>
`;

exports[`PreviewCard renders with all props 1`] = `
<PreviewCard__BoxContainer
  isLarge="development · April 1st, 2019"
  isVideo={false}
>
  <PreviewCard__Anchor
    href="#"
  >
    <PreviewCard__ImageContainer
      isLarge="development · April 1st, 2019"
    >
      <Image
        alt="Image of co-workers collaborating"
        height={300}
        src="blog-example.jpg"
        width={300}
      />
    </PreviewCard__ImageContainer>
  </PreviewCard__Anchor>
  <PreviewCard__Anchor
    href="#"
  >
    <Box
      horizontal={4}
      inline={false}
      tag="div"
      vertical={5}
    >
      <PreviewCard__ContentContainer
        data-testid="contentContainer"
        footer="By Halo"
        header="development · April 1st, 2019"
      >
        <Box
          inline={false}
          tag="div"
        >
          <Text
            block={false}
            bold={true}
            invert={false}
            size="small"
          >
            development · April 1st, 2019
          </Text>
        </Box>
        <Box
          inline={false}
          tag="div"
          vertical={3}
        >
          <PreviewCard__P
            alt="Hello world!"
          >
            Hello world!
          </PreviewCard__P>
        </Box>
        <Box
          inline={false}
          tag="div"
        >
          <Text
            block={false}
            bold={false}
            invert={false}
            size="small"
          >
            By Halo
          </Text>
        </Box>
      </PreviewCard__ContentContainer>
    </Box>
  </PreviewCard__Anchor>
</PreviewCard__BoxContainer>
`;

exports[`PreviewCard renders with footer 1`] = `
<PreviewCard__BoxContainer
  isLarge="By Halo"
  isVideo={false}
>
  <PreviewCard__Anchor
    href="#"
  >
    <PreviewCard__ImageContainer
      isLarge="By Halo"
    >
      <Image
        alt="Image of co-workers collaborating"
        height={300}
        src="blog-example.jpg"
        width={300}
      />
    </PreviewCard__ImageContainer>
  </PreviewCard__Anchor>
  <PreviewCard__Anchor
    href="#"
  >
    <Box
      horizontal={4}
      inline={false}
      tag="div"
      vertical={5}
    >
      <PreviewCard__ContentContainer
        data-testid="contentContainer"
        footer="By Halo"
      >
        <Box
          inline={false}
          tag="div"
          vertical={3}
        >
          <PreviewCard__P
            alt="Hello world!"
          >
            Hello world!
          </PreviewCard__P>
        </Box>
        <Box
          inline={false}
          tag="div"
        >
          <Text
            block={false}
            bold={false}
            invert={false}
            size="small"
          >
            By Halo
          </Text>
        </Box>
      </PreviewCard__ContentContainer>
    </Box>
  </PreviewCard__Anchor>
</PreviewCard__BoxContainer>
`;

exports[`PreviewCard renders with header 1`] = `
<PreviewCard__BoxContainer
  isLarge="development · April 1st, 2019"
  isVideo={false}
>
  <PreviewCard__Anchor
    href="#"
  >
    <PreviewCard__ImageContainer
      isLarge="development · April 1st, 2019"
    >
      <Image
        alt="Image of co-workers collaborating"
        height={300}
        src="blog-example.jpg"
        width={300}
      />
    </PreviewCard__ImageContainer>
  </PreviewCard__Anchor>
  <PreviewCard__Anchor
    href="#"
  >
    <Box
      horizontal={4}
      inline={false}
      tag="div"
      vertical={5}
    >
      <PreviewCard__ContentContainer
        data-testid="contentContainer"
        header="development · April 1st, 2019"
      >
        <Box
          inline={false}
          tag="div"
        >
          <Text
            block={false}
            bold={true}
            invert={false}
            size="small"
          >
            development · April 1st, 2019
          </Text>
        </Box>
        <Box
          inline={false}
          tag="div"
          vertical={3}
        >
          <PreviewCard__P
            alt="Hello world!"
          >
            Hello world!
          </PreviewCard__P>
        </Box>
      </PreviewCard__ContentContainer>
    </Box>
  </PreviewCard__Anchor>
</PreviewCard__BoxContainer>
`;

exports[`PreviewCard renders with long body text 1`] = `
<PreviewCard__BoxContainer
  isVideo={false}
>
  <PreviewCard__Anchor
    href="#"
  >
    <PreviewCard__ImageContainer>
      <Image
        alt="Image of co-workers collaborating"
        height={300}
        src="blog-example.jpg"
        width={300}
      />
    </PreviewCard__ImageContainer>
  </PreviewCard__Anchor>
  <PreviewCard__Anchor
    href="#"
  >
    <Box
      horizontal={3}
      inline={false}
      tag="div"
      vertical={3}
    >
      <PreviewCard__ContentContainer
        data-testid="contentContainer"
      >
        <Box
          inline={false}
          tag="div"
        >
          <PreviewCard__P
            alt="Hello world, this preview card has all the props and has text that is over 70 characters in length"
          >
            Hello world, this preview card has all the props and has text that is ...
          </PreviewCard__P>
        </Box>
      </PreviewCard__ContentContainer>
    </Box>
  </PreviewCard__Anchor>
</PreviewCard__BoxContainer>
`;

exports[`PreviewCard renders with only Required props 1`] = `
<PreviewCard__BoxContainer
  isVideo={false}
>
  <PreviewCard__Anchor
    href="#"
  >
    <PreviewCard__ImageContainer>
      <Image
        alt="Image of co-workers collaborating"
        height={300}
        src="blog-example.jpg"
        width={300}
      />
    </PreviewCard__ImageContainer>
  </PreviewCard__Anchor>
  <PreviewCard__Anchor
    href="#"
  >
    <Box
      horizontal={3}
      inline={false}
      tag="div"
      vertical={3}
    >
      <PreviewCard__ContentContainer
        data-testid="contentContainer"
      >
        <Box
          inline={false}
          tag="div"
        >
          <PreviewCard__P
            alt="Hello world!"
          >
            Hello world!
          </PreviewCard__P>
        </Box>
      </PreviewCard__ContentContainer>
    </Box>
  </PreviewCard__Anchor>
</PreviewCard__BoxContainer>
`;
